--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
-    "notyf": "^3.10.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.0"
