--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.1",
     "fs": "^0.0.1-security",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
